# pkg

./: Cargo.toml  README.md
resources/: conf.yml  repos.txt  repos.yml
src/: install.rs  main.rs  repo_manage.rs  sync.rs  uninstall.rs
src/io_utils/: db.rs  lib.rs
