[package]
name = "pkg-cosmo"
version = "0.1.0"
authors = ["cook1e <vincent.schweiger@xolley.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
spinner = "0.5.0"
rust-embed= "5.9.0"
serde = "1.0.125"
serde_yaml = "0.8.17"
rusqlite = "0.25.1"
home = "0.5.3"


[lib]
name = "io_utils"
path = "src/io_utils/lib.rs"
